# sla-predictor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
resources/context/: session-scratchpad.md
resources/development_plan/: tdd_5_stage_plan.md
resources/prd/: sla_predictor.md
src/sla_predictor/: advanced_features.py  cli_interface.py  data_loader.py  date_processor.py  feature_engineer.py  model_evaluator.py  model_persistence.py  model_trainer.py  prediction_engine.py  sla_validator.py  time_series_splitter.py
tests/: test_advanced_features.py  test_cli_interface.py  test_data_loader.py  test_date_processor.py  test_feature_engineer.py  test_integration.py  test_model_evaluator.py  test_model_persistence.py  test_model_trainer.py  test_prediction_engine.py  test_sla_validator.py  test_time_series_splitter.py
